Adding OpenApi Contract first to animes and producers
