# anime-service/src/main/java/academy/devdojo/anime/controller/AnimeController.java
@@ -1,19 +1,18 @@
 package academy.devdojo.anime.controller;
 
 import academy.devdojo.anime.mapper.AnimeMapper;
-import academy.devdojo.anime.request.AnimePostRequest;
-import academy.devdojo.anime.request.AnimePutRequest;
-import academy.devdojo.anime.response.AnimeGetResponse;
-import academy.devdojo.anime.response.AnimePostResponse;
-import academy.devdojo.anime.response.AnimePutResponse;
 import academy.devdojo.anime.service.AnimeService;
+import academy.devdojo.api.AnimeControllerApi;
 import academy.devdojo.domain.Anime;
+import academy.devdojo.dto.*;
+import io.swagger.v3.oas.annotations.Parameter;
+import io.swagger.v3.oas.annotations.enums.ParameterIn;
 import io.swagger.v3.oas.annotations.security.SecurityRequirement;
 import jakarta.validation.Valid;
+import jakarta.validation.constraints.Min;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springdoc.core.annotations.ParameterObject;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
@@ -26,7 +25,7 @@ import java.util.List;
 @Slf4j
 @RequiredArgsConstructor
 @SecurityRequirement(name = "basicAuth") //swagger auth
-public class AnimeController {
+public class AnimeController implements AnimeControllerApi {
     private final AnimeMapper mapper;
     private final AnimeService service;
 
@@ -39,16 +38,31 @@ public class AnimeController {
         return ResponseEntity.ok(response);
     }
 
+    @Override
     @GetMapping("/paginated")
-    public ResponseEntity<Page<AnimeGetResponse>> findAllAnimesPaginated(@ParameterObject Pageable pageable) {
+    public ResponseEntity<PageAnimeGetResponse> findAllAnimesPaginated(
+            @Min(0) @Parameter(name = "page", description = "Zero-based page index (0..N)", in = ParameterIn.QUERY) @Valid @RequestParam(value = "page", required = false, defaultValue = "0") Integer page,
+            @Min(1) @Parameter(name = "size", description = "The size of the page to be returned", in = ParameterIn.QUERY) @Valid @RequestParam(value = "size", required = false, defaultValue = "20") Integer size,
+            @Parameter(name = "sort", description = "Sorting criteria in the format: property,(asc|desc). Default sort order is ascending. Multiple sort criteria are supported.", in = ParameterIn.QUERY) @Valid @RequestParam(value = "sort", required = false) List<String> sort,
+            @ParameterObject final Pageable pageable) {
         log.info("Request received to list all animes paginated");
 
-        var pageAnimeGetResponse = service.findAllPaginated(pageable).map(mapper::toAnimeGetResponse);
+        var jpaPageAnimeGetResponse = service.findAllPaginated(pageable);
+        var pageAnimeGetResponse = mapper.toPageAnimeGetResponse(jpaPageAnimeGetResponse);
+
         return ResponseEntity.ok(pageAnimeGetResponse);
     }
+//
+//    @GetMapping("/paginated") findAll paginated using DTO's
+//    public ResponseEntity<Page<AnimeGetResponse>> findAllAnimesPaginated(@ParameterObject Pageable pageable) {
+//        log.info("Request received to list all animes paginated");
+//
+//        var pageAnimeGetResponse = service.findAllPaginated(pageable).map(mapper::toAnimeGetResponse);
+//        return ResponseEntity.ok(pageAnimeGetResponse);
+//    }
 
     @GetMapping("{id}")
-    public ResponseEntity<AnimeGetResponse> findAnimeById(@PathVariable Long id) {
+    public ResponseEntity<AnimeGetResponse> findByAnimeId(@PathVariable Long id) {
         log.debug("Request to find anime by id {}", id);
 
         Anime animeFound = service.findByIdOrThrowNotFoundException(id);
@@ -70,7 +84,7 @@ public class AnimeController {
     }
 
     @DeleteMapping("{id}")
-    public ResponseEntity<Void> deleteAnime(@PathVariable Long id) {
+    public ResponseEntity<Void> deleteAnimeById(@PathVariable Long id) {
         log.info("Deleting anime by id: {}", id);
 
         service.delete(id);
