# anime-service/src/main/java/academy/devdojo/anime/response/AnimePutResponse.java
@@ -1,9 +1,0 @@
-package academy.devdojo.anime.response;
-
-import lombok.Data;
-
-@Data
-public class AnimePutResponse {
-    private Long id;
-    private String name;
-}
