# anime-service/src/main/java/academy/devdojo/producer/DTO/response/ProducerPutResponse.java
@@ -1,9 +1,0 @@
-package academy.devdojo.producer.DTO.response;
-
-import lombok.Data;
-
-@Data
-public class ProducerPutResponse {
-    private Long id;
-    private String name;
-}
